<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">e-comm</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repassword">Re-enter the password</string>
    <string name="signup">SignUp</string>
    <string name="login">LogIn</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="balance">Balance</string>
    <string name="age">Age</string>
    <string name="createprofile">Create Profile</string>
    <string name="search">Search</string>
    <string name="update_address" tools:ignore="DuplicateDefinition">Update Address</string>
    <string name="is_d_a" tools:ignore="DuplicateDefinition">Check Availability</string>
    <string name="address" tools:ignore="DuplicateDefinition">Address</string>
    <string name="address_possible" tools:ignore="DuplicateDefinition">Enter address to see product availability</string>
    <string name="server_url">http://cmpatil.pythonanywhere.com</string>

    <string name="title_activity_confirm">ConfirmActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="scroll"><![CDATA[<--------Scroll-------->]]></string>
</resources>
