<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ScrollView
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="107dp"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="259dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/cart"
                tools:ignore="ContentDescription,VectorDrawableCompat" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:autofillHints="Username"
                android:background="#C6D8EC"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:autofillHints="Email"
                android:background="#C6D8EC"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:autofillHints="Password"
                android:background="#C6D8EC"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/password2"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:autofillHints="Password2"
                android:background="#C6D8EC"
                android:ems="10"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:textSize="30sp" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:background="@color/BottleGreen"
                android:text="@string/signup"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>