<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ScrollView
        android:id="@+id/scroller"
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <LinearLayout
            android:id="@+id/linear_layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:textSize="30sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="307dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/cart"
                tools:ignore="VectorDrawableCompat" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="74dp"
                android:background="#C6D8EC"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="#C6D8EC"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="30sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="78dp"
                android:background="#A0B0E3"
                android:text="@string/login"
                android:textSize="30sp"
                tools:ignore="DuplicateIds" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="220dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>